# gvsbuild

./: bld.bat  build.py
cairomm/: 001-define-mpi-msvc.patch  meson.build
cairomm/cairomm/: cairomm.rc  meson.build
cairomm/examples/text/: meson.build
gvsbuild/: gtkmm.py  projects.py
gvsbuild/projects/: pycairo.py  pygobject.py
gvsbuild/utils/: base_expanders.py  base_project.py  builder.py  parser.py  simple_ui.py
libsig++/: meson.build
libsig++/examples/: meson.build
libsig++/sigc++/: meson.build
libsodium/pc-files/: libsodium.pc
link-gendef/: link_gendef-cpy.py  link_gendef.cpp  meson.build
patches/libvpx/: 0001-Make-mandatory-the-win-sdk-10.patch
py/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  _zoneinfo.pyd  pyexpat.pyd  python.cat  select.pyd  unicodedata.pyd  winsound.pyd
user_scripts_examples/: test.py
zeromq/builds/msvc/properties/: Output.props
zeromq/builds/msvc/vs2017/inproc_lat/: inproc_lat.vcxproj
zeromq/builds/msvc/vs2017/inproc_thr/: inproc_thr.vcxproj
zeromq/builds/msvc/vs2017/libzmq/: libzmq.vcxproj
zeromq/builds/msvc/vs2017/local_lat/: local_lat.vcxproj
zeromq/builds/msvc/vs2017/local_thr/: local_thr.vcxproj
zeromq/builds/msvc/vs2017/remote_lat/: remote_lat.vcxproj
zeromq/builds/msvc/vs2017/remote_thr/: remote_thr.vcxproj
zeromq/pc-files/: libzmq.pc
